feat: add celery beat&worker services

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,3 +5,21 @@ services:
     command: ['python', '/app/crawler/manage.py', 'runserver', '0:80']
     volumes:
       - .:/app
+  
+  crawler_redis:
+    container_name: crawler_redis
+    image: redis:7.0.4-alpine
+  
+  crawler_beat:
+    container_name: crawler_beat
+    build: .
+    command: ['sh', '-c', 'cd /app/crawler && celery -A crawler beat -l info']
+    volumes:
+      - .:/app
+  
+  crawler_worker:
+    container_name: crawler_worker
+    build: .
+    command: ['sh', '-c', 'cd /app/crawler && celery -A crawler worker -l info']
+    volumes:
+      - .:/app
