--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
       - .:/app
     ports:
       - 8025:80
+    env_file:
+      - .env
   
   crawler_redis:
     container_name: crawler_redis
@@ -18,6 +20,8 @@ services:
     command: ['sh', '-c', 'cd /app/crawler && celery -A crawler beat -l info']
     volumes:
       - .:/app
+    env_file:
+      - .env
   
   crawler_worker:
     container_name: crawler_worker
@@ -25,6 +29,8 @@ services:
     command: ['sh', '-c', 'cd /app/crawler && celery -A crawler worker -l info']
     volumes:
       - .:/app
+    env_file:
+      - .env
   
   crawler_firefox:
     container_name: crawler_firefox
