--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,29 +1,36 @@
-name: Releases
+name: Release using conventional commits (master branch)
+
 on:
   push:
     branches:
       - master
 
 jobs:
-  changelog:
+  release:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - name: checkout
+        uses: actions/checkout@v2
 
-      - name: conventional Changelog Action
+      - name: conventional changelog action
         id: changelog
-        uses: TriPSs/conventional-changelog-action@v3.7.1
+        # https://github.com/TriPSs/conventional-changelog-action
+        uses: TriPSs/conventional-changelog-action@latest
         with:
-          github-token: ${{ secrets.CHANGELOG_RELEASE }}
-          version-file: './package.json,./package-lock.json'
+          # you can also create separate token to trace action
+          github-token: "${{ secrets.GITHUB_TOKEN }}"
 
       - name: create release
-        uses: actions/create-release@v1
-        if: ${{ steps.changelog.outputs.skipped == 'false' }}
+        # https://github.com/actions/create-release
+        uses: softprops/action-gh-release@v1
+        if: ${{steps.changelog.outputs.skipped == 'false'}}
         env:
-          GITHUB_TOKEN: ${{ secrets.CHANGELOG_RELEASE }}
+          # This token is provided by Actions, you do not need to create your own token
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ steps.changelog.outputs.tag }}
-          release_name: ${{ steps.changelog.outputs.tag }}
-          body: ${{ steps.changelog.outputs.clean_changelog }}
+            tag_name: ${{ steps.changelog.outputs.tag }}
+            name: ${{ steps.changelog.outputs.tag }}
+            body: ${{steps.changelog.outputs.clean_changelog}}
+            draft: false
+            prerelease: false
